# Mitra-Electronics

./: .gitignore  Dockerfile  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: request.yml
blog/: router.py
src/: app.py  main.py
src/blog/: router.py
src/styles/: global.css
src/templates/: base.html
