[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Blog Website for Mitra-Electronics"
authors = ["Mitra-Electronics <ishanmitra020@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
Jinja2 = "^3.1.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
